Refactoring for slides api
